--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router": "^1.0.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1",
-    "promise": "~8.0.1"
+    "promise": "~8.0.1",
+	"es6-promise": "^4.1.1"
   },
   "devDependencies": {},
   "scripts": {
