--- a/package.json
+++ b/package.json
@@ -14,13 +14,25 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "history": "~1.17.0",
+    "mongodb": "^2.2.5",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-router": "^1.0.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1",
     "promise": "~8.0.1",
-	  "es6-promise": "^4.1.1"
+    "es6-promise": "^4.1.1",
+    "morgan": "~1.7.0",
+    "pug": "^0.1.0",
+    "request": "^2.74.0",
+    "serve-favicon": "~2.3.0",
+    "tsc": "^1.20150623.0",
+    "marked": "~0.3.7",
+    "foreman": "~2.0.0",
+    "axios": "~0.17.1",
+    "body-parser": "~1.18.2",
+    "express": "~4.16.2",
+    "mongoose": "~4.13.7"
   },
   "devDependencies": {},
   "scripts": {
